workspace/log/build_2023-10-02_20-28-03/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In constructor ‘TemplateDroneControl::TemplateDroneControl()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:44:15: error: expected ‘(’ before ‘current_state_’
   44 |         while current_state_.mode.c_str() != "GUIDED"{
      |               ^~~~~~~~~~~~~~
      |               (
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:44:46: warning: comparison with string literal results in unspecified behavior [-Waddress]
   44 |         while current_state_.mode.c_str() != "GUIDED"{
      |                                              ^~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:44:54: error: expected ‘)’ before ‘{’ token
   44 |         while current_state_.mode.c_str() != "GUIDED"{
      |               ~~~~~~~~~~~~~~                         ^
      |                                                      )
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:48:59: error: no matching function for call to ‘rclcpp::Client<mavros_msgs::srv::CommandBool>::async_send_request(const char [14])’
   48 |         arming_client_->async_send_request("{value: True}")
      |                                                           ^
In file included from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/opt/ros/foxy/include/rclcpp/client.hpp:318:3: note: candidate: ‘rclcpp::Client<ServiceT>::SharedFuture rclcpp::Client<ServiceT>::async_send_request(rclcpp::Client<ServiceT>::SharedRequest) [with ServiceT = mavros_msgs::srv::CommandBool; rclcpp::Client<ServiceT>::SharedFuture = std::shared_future<std::shared_ptr<mavros_msgs::srv::CommandBool_Response_<std::allocator<void> > > >; typename ServiceT::Response::SharedPtr = std::shared_ptr<mavros_msgs::srv::CommandBool_Response_<std::allocator<void> > >; rclcpp::Client<ServiceT>::SharedRequest = std::shared_ptr<mavros_msgs::srv::CommandBool_Request_<std::allocator<void> > >]’
  318 |   async_send_request(SharedRequest request)
      |   ^~~~~~~~~~~~~~~~~~
/opt/ros/foxy/include/rclcpp/client.hpp:318:36: note:   no known conversion for argument 1 from ‘const char [14]’ to ‘rclcpp::Client<mavros_msgs::srv::CommandBool>::SharedRequest’ {aka ‘std::shared_ptr<mavros_msgs::srv::CommandBool_Request_<std::allocator<void> > >’}
  318 |   async_send_request(SharedRequest request)
      |                      ~~~~~~~~~~~~~~^~~~~~~
/opt/ros/foxy/include/rclcpp/client.hpp:333:3: note: candidate: ‘template<class CallbackT, typename std::enable_if<rclcpp::function_traits::same_arguments<CallbackT, std::function<void(std::shared_future<std::shared_ptr<mavros_msgs::srv::CommandBool_Response_<std::allocator<void> > > >)> >::value, void>::type* <anonymous> > rclcpp::Client<ServiceT>::SharedFuture rclcpp::Client<ServiceT>::async_send_request(rclcpp::Client<ServiceT>::SharedRequest, CallbackT&&) [with CallbackT = CallbackT; typename std::enable_if<rclcpp::function_traits::same_arguments<CallbackT, std::function<void(std::shared_future<typename ServiceT::Response::SharedPtr>)> >::value>::type* <anonymous> = <enumerator>; ServiceT = mavros_msgs::srv::CommandBool]’
  333 |   async_send_request(SharedRequest request, CallbackT && cb)
      |   ^~~~~~~~~~~~~~~~~~
/opt/ros/foxy/include/rclcpp/client.hpp:333:3: note:   template argument deduction/substitution failed:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:48:59: note:   candidate expects 2 arguments, 1 provided
   48 |         arming_client_->async_send_request("{value: True}")
      |                                                           ^
In file included from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/opt/ros/foxy/include/rclcpp/client.hpp:359:3: note: candidate: ‘template<class CallbackT, typename std::enable_if<rclcpp::function_traits::same_arguments<CallbackT, std::function<void(std::shared_future<std::pair<std::shared_ptr<mavros_msgs::srv::CommandBool_Request_<std::allocator<void> > >, std::shared_ptr<mavros_msgs::srv::CommandBool_Response_<std::allocator<void> > > > >)> >::value, void>::type* <anonymous> > rclcpp::Client<ServiceT>::SharedFutureWithRequest rclcpp::Client<ServiceT>::async_send_request(rclcpp::Client<ServiceT>::SharedRequest, CallbackT&&) [with CallbackT = CallbackT; typename std::enable_if<rclcpp::function_traits::same_arguments<CallbackT, std::function<void(std::shared_future<std::pair<typename ServiceT::Request::SharedPtr, typename ServiceT::Response::SharedPtr> >)> >::value>::type* <anonymous> = <enumerator>; ServiceT = mavros_msgs::srv::CommandBool]’
  359 |   async_send_request(SharedRequest request, CallbackT && cb)
      |   ^~~~~~~~~~~~~~~~~~
/opt/ros/foxy/include/rclcpp/client.hpp:359:3: note:   template argument deduction/substitution failed:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:48:59: note:   candidate expects 2 arguments, 1 provided
   48 |         arming_client_->async_send_request("{value: True}")
      |                                                           ^
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
